# VietnamOnline

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  STRUCTURE.md  build_and_run.bat
analytics/schemas/: events.json
client/prototype/include/: AuthManager.hpp  GameEngine.hpp  PlayerDisplay.hpp
client/prototype/src/: AuthManager.cpp  GameEngine.cpp  main.cpp
client/unreal/: README.md  VietnamOnline.uproject
client/unreal 5.7/: README.md  VietnamOnline.sln  VietnamOnline.uproject
client/unreal 5.7/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
client/unreal 5.7/Source/: VietnamOnline.Target.cs  VietnamOnlineEditor.Target.cs
client/unreal/Config/: DefaultEngine.ini  DefaultInput.ini
client/unreal/Source/: VietnamOnline.Target.cs  VietnamOnlineEditor.Target.cs
data/zones/hoi_an/: manifest.json  pois.sample.json
doc/: VietnamOnline_Atomic_Detail_Level.md  Vietnam_Online_Chuong_19_30.md  Vietnam_Online_Chuong_31_35.md  Vietnam_Online_Project.md
infra/database/: schema_supabase.sql  schema_v1.sql
infra/docker/: docker-compose.yml
server/auth-service/include/: AuthService.hpp
server/include/: AllServices.hpp
server/src/: main.cpp
server/zone-instance-service/: README.md
shared/src/: EnvConfig.cpp  HttpClient.cpp  OsmClient.cpp  RedisClient.cpp  SupabaseClient.cpp  WeatherService.cpp
tests/validation/: test_validation.cpp
tools/infra/: check_connections.bat
tools/supabase/: apply_schema.py  check_schema.bat
tools/ue5/: create_hoi_an_map.py  setup_phase_a.py
tools/validate/: validate_data.py
(+142 files in other folders)
